--- a/src/app/protected/cranix/security/room-access/room-access.component.html
+++ b/src/app/protected/cranix/security/room-access/room-access.component.html
@@ -8,12 +8,6 @@
       <ion-label>{{'Actual status' | translate}}</ion-label>
     </ion-segment-button>
   </ion-segment>
-  <ion-item-divider></ion-item-divider>
-  <ion-item lines="none">
-    <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('roomsAccessFilter')"
-      id="roomsAccessFilter">
-    </ion-input>
-  </ion-item>
   <ion-buttons slot="end">
     <ion-button *ngIf="segment == 'list'" size="small" fill="solid" (click)="redirectToAddEdit(null)"
       matTooltip="{{'Add new room access status' | translate }}" [disabled]="disabled">
@@ -37,6 +31,11 @@
     </ion-button>
   </ion-buttons>
 </ion-toolbar>
+<ion-item *ngIf="!authService.isMD()" lines="none">
+  <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('roomsAccessFilter')"
+    id="roomsAccessFilter">
+  </ion-input>
+</ion-item>
 <ion-content *ngIf="!authService.isMD()">
   <ag-grid-angular *ngIf="segment == 'list'" #accessGrid style="width: 100%; height: 100%;" id="accessGridTable"
     class="{{authService.settings.agGridThema}}" rowSelection="multiple"
