--- a/src/app/protected/cranix/softwares/sets/installation-sets.component.html
+++ b/src/app/protected/cranix/softwares/sets/installation-sets.component.html
@@ -17,7 +17,7 @@
     </ion-fab-list>
   </ion-fab>
   <ion-toolbar>
-    <ion-item>
+    <ion-item lines="none">
       <ion-label *ngIf="installationSetApi">
         #{{installationSetApi.getDisplayedRowCount()}}
       </ion-label>
