--- a/src/app/protected/cephalix/institutes/lists/institutes.component.html
+++ b/src/app/protected/cephalix/institutes/lists/institutes.component.html
@@ -1,6 +1,6 @@
 <cranix-toolbar title="{{'Manage institutes' | translate}}"></cranix-toolbar>
 <ion-content *ngIf="!authService.isMD()" id=carded>
-  <ion-toolbar>
+  <ion-toolbar class="page-toolbar">
     <ion-item lines="none">
       <ion-label *ngIf="gridApi">
         #{{gridApi.getDisplayedRowCount()}}
