--- a/src/app/protected/toolbar/toolbar.component.scss
+++ b/src/app/protected/toolbar/toolbar.component.scss
@@ -23,10 +23,12 @@ ion-toolbar{
     border-left: none;
     border-right: none;
     border-top: none;
-    ion-title {
-        padding-inline-start: 38px;
-        padding-inline-end: 38px;
+    ion-label {
+        //padding-inline-start: 38px;
+        //padding-inline-end: 38px;
         text-align: left;
+        font-size: 12px;
+        white-space: normal;
     }
 }
 #toolbarSubtitle {
@@ -35,6 +37,7 @@ ion-toolbar{
         padding-inline-start: 0;
         padding-inline-end: 0;
         text-align: center;
+        font-size: 16px;
     }
 }
 
