--- a/src/theme/cranix-custom.scss
+++ b/src/theme/cranix-custom.scss
@@ -188,6 +188,7 @@ input[type=text] {
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
+  background-color: aquamarine;
 }
 
 input:focus,
@@ -196,7 +197,21 @@ textarea:focus,
 button:focus {
   outline: none;
 }
-
+.page-toolbar {
+  --ion-text-color: var(--ion-color-light-contrast);
+  --ion-background-color: var(--ion-color-light);
+  height: 54px;
+  border-color: var(--ion-color-primary-tint);
+  border-width: 2px;
+  border-left: none;
+  border-right: none;
+  border-top: none;
+  ion-title {
+      padding-inline-start: 1px;
+      padding-inline-end: 1px;
+      text-align: left;
+  }
+}
 /*.ag-header-group-cell-label, .ag-header-cell-label{
   justify-content: center;
 }
