--- a/src/app/protected/cephalix/tickets/tickets.page.html
+++ b/src/app/protected/cephalix/tickets/tickets.page.html
@@ -46,8 +46,8 @@
   </ion-item>
   <ion-list>
     <ion-item-sliding *ngFor="let object of objectService.allObjects['ticket']">
-      <ion-item style="color: {{ticketColor[object.ticketStatus]}}" (click)="redirectToEdit(object)">
-        <ion-label>
+      <ion-item style="color: {{ticketColor[object.ticketStatus]}}">
+        <ion-label (click)="redirectToEdit(object)">
           <h2>{{ object.title }}</h2>
           {{ object.recDate | date:'yy-MM-dd HH:mm' }}
         </ion-label>
@@ -58,12 +58,12 @@
         </ion-label>
       </ion-item>
       <ion-item-options side="end">
-        <ion-button fill="clear" (click)="redirectToDelete(object)">
-          <ion-icon color="danger" name="trash-outline"></ion-icon>
-        </ion-button>
-        <ion-button fill="clear" (click)="redirectToEdit(object)">
+        <ion-item-option color="danger" (click)="redirectToDelete(object)">
+          <ion-icon  name="trash-outline"></ion-icon>
+        </ion-item-option>
+        <ion-item-option (click)="redirectToEdit(object)">
           <ion-icon name="build-sharp"></ion-icon>
-        </ion-button>
+        </ion-item-option>
       </ion-item-options>
     </ion-item-sliding>
   </ion-list>
