--- a/src/app/shared/objects-edit/objects-edit.component.html
+++ b/src/app/shared/objects-edit/objects-edit.component.html
@@ -26,13 +26,8 @@
       <div *ngFor="let key of objectKeys" [ngSwitch]="objectService.typeOf(key,object,objectAction)">
         <ion-item *ngSwitchCase="'file'">
           <ion-label>{{ key | translate }}{{objectService.required[key]}}</ion-label>
-          <div class="upload-btn-wrapper">
-            <button class="btn">
-              <div *ngIf="!fileToUpload">{{'File to Upload'|translate}}</div>
-              <div *ngIf="fileToUpload">{{fileToUpload.name}}</div>
-              <input slot="end" type="file" (change)="handleFileInput($event)">
-            </button>
-          </div>
+          <ion-input type="file" multiple (change)="handleFileInput($event)"(change)="onFilesAdded($event)">
+          </ion-input>
         </ion-item>
         <ion-item *ngSwitchCase="'number'">
           <ion-label position="stacked">{{ key | translate }}</ion-label>
