--- a/src/app/protected/cranix/softwares/packages/software-packages.component.html
+++ b/src/app/protected/cranix/softwares/packages/software-packages.component.html
@@ -18,7 +18,7 @@
 <ion-searchbar placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged('softwareFilterMD')"
   id="softwareFilterMD" showCancelButton="never" class="hidden-lg hidden-xl"></ion-searchbar>
 <ion-content id="carded">
-  <ion-toolbar>
+  <ion-toolbar class="page-toolbar">
     <ion-item lines="none">
       <ion-label *ngIf="gridApi">
         #{{gridApi.getDisplayedRowCount()}}
