--- a/src/app/protected/cranix/softwares/sets/installation-sets.component.html
+++ b/src/app/protected/cranix/softwares/sets/installation-sets.component.html
@@ -16,7 +16,7 @@
       </ion-fab-button>
     </ion-fab-list>
   </ion-fab>
-  <ion-toolbar>
+  <ion-toolbar class="page-toolbar">
     <ion-item lines="none">
       <ion-label *ngIf="installationSetApi">
         #{{installationSetApi.getDisplayedRowCount()}}
