--- a/src/app/protected/cephalix/institutes/lists/institutes-sync-objects.component.html
+++ b/src/app/protected/cephalix/institutes/lists/institutes-sync-objects.component.html
@@ -9,7 +9,7 @@
   </ion-segment-button>
 </ion-segment>
 <ion-content *ngIf="objectService.selection.length != 0">
-  <ion-toolbar>
+  <ion-toolbar class="page-toolbar">
     <ion-item>
       <ion-input placeholder="{{'search' | translate }}" (input)="onMemberFilterChanged()" id="memberFilter">
       </ion-input>
