--- a/src/app/protected/cranix/informations/informations.component.html
+++ b/src/app/protected/cranix/informations/informations.component.html
@@ -1,5 +1,5 @@
 <cranix-toolbar title="{{ title | translate }}"></cranix-toolbar>
-<ion-toolbar>
+<ion-toolbar class="page-toolbar">
   <ion-segment (ionChange)="segmentChanged($event)" color="secondary" value="announcement">
     <ion-segment-button value="announcement" layout="icon-start">
       <ion-label class="hidden-xs hidden-sm">{{ 'announcements' | translate}}</ion-label>
