--- a/src/app/protected/cranix/mygroups/mygroups.page.html
+++ b/src/app/protected/cranix/mygroups/mygroups.page.html
@@ -1,5 +1,5 @@
 <cranix-toolbar title="{{ 'My ' + segment +'s' | translate }}"></cranix-toolbar>
-<ion-toolbar>
+<ion-toolbar class="page-toolbar">
   <ion-segment (ionChange)="segmentChanged($event)" color="secondary" value="group">
     <ion-segment-button value="group" layout="icon-start">
       <ion-label class="hidden-xs hidden-sm">{{'Groups' | translate}}</ion-label>
