--- a/src/app/protected/cranix/security/firewall/firewall.component.html
+++ b/src/app/protected/cranix/security/firewall/firewall.component.html
@@ -1,5 +1,5 @@
 <cranix-toolbar title="{{'Manage firewall configuration' | translate}}"></cranix-toolbar>
-<ion-toolbar>
+<ion-toolbar class="page-toolbar">
   <ion-segment (ionChange)="segmentChanged($event)" color="secondary" value="in">
     <ion-segment-button value="in" layout="icon-start">
       <ion-label *ngIf="!authService.isMD()">{{'Incoming rules' | translate}}</ion-label>
