--- a/src/app/protected/cranix/security/proxy/proxy.component.html
+++ b/src/app/protected/cranix/security/proxy/proxy.component.html
@@ -1,5 +1,5 @@
 <cranix-toolbar title="{{ 'Manage proxy configuration' | translate}}"></cranix-toolbar>
-<ion-toolbar>
+<ion-toolbar class="page-toolbar">
   <ion-segment (ionChange)="segmentChanged($event)" color="secondary" value="basic">
     <ion-segment-button value="basic">
       <ion-icon name="settings"></ion-icon>
