--- a/src/app/protected/cranix/system/status/system-status.component.html
+++ b/src/app/protected/cranix/system/status/system-status.component.html
@@ -22,7 +22,7 @@
       </ion-fab-button>
     </ion-fab-list>
   </ion-fab>
-  <ion-toolbar *ngIf="!authService.isMD()">
+  <ion-toolbar *ngIf="!authService.isMD()" class="page-toolbar">
     <ion-buttons slot="end">
       <ion-button size="small" fill="solid" (click)="support($event)" matTooltip="{{'Add support' | translate }}">
         <ion-icon slot="icon-only" name="help-circle"></ion-icon>
