--- a/src/app/protected/cephalix/institutes/lists/institutes.manage.html
+++ b/src/app/protected/cephalix/institutes/lists/institutes.manage.html
@@ -43,7 +43,7 @@
   </ion-toolbar>
 
   <ag-grid-angular id="instituteManageTable" style="width: 100%; height: 92%;" rowSelection="multiple"
-    class="{{authService.settings.agGridThema}}" rowHeight="{{authService.settings.rowHeight}}" [context]="context"
+    class="{{authService.settings.agGridThema}}" [rowHeight]="authService.settings.rowHeight" [context]="context"
     [rowData]="rowData" [defaultColDef]="defaultColDef" [columnDefs]="columnDefs"
     [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick" (gridReady)="onGridReady($event)">
   </ag-grid-angular>
