--- a/src/app/protected/cranix/security/proxy/proxy.component.html
+++ b/src/app/protected/cranix/security/proxy/proxy.component.html
@@ -48,7 +48,7 @@
     </ion-input>
   </ion-item>
   <ag-grid-angular *ngIf="segment == 'basic'" style="width: 100%; height: 100%;"
-    class="{{authService.settings.agGridThema}}" rowHeight="{{authService.settings.rowHeight}}" [rowData]="rowData"
+    class="{{authService.settings.agGridThema}}" [rowHeight]="authService.settings.rowHeight" [rowData]="rowData"
     [columnDefs]="columnDefs" [context]="context" (gridReady)="proxyGridReady($event)" id="proxyGridTable">
   </ag-grid-angular>
   <ion-list *ngIf="segment == 'good' || segment == 'bad' || segment == 'cephalix'">
