--- a/src/app/protected/cranix/users/details/groups/user-groups.page.html
+++ b/src/app/protected/cranix/users/details/groups/user-groups.page.html
@@ -31,8 +31,8 @@
               style="width: 100%; height: 100%;"
               class="{{authService.settings.agGridThema}}"
               rowSelection="multiple" 
-              rowHeight="{{authService.settings.rowHeight}}"
-              rowMultiSelectWithClick="{{authService.settings.rowMultiSelectWithClick}}"
+              [rowHeight]="authService.settings.rowHeight"
+              [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
               [rowData]="memberData"
               [columnDefs]="columnDefs"
               (gridReady)="onMemberReady($event)"
@@ -51,8 +51,8 @@
               style="width: 100%; height: 100%;"
               class="{{authService.settings.agGridThema}}"
               rowSelection="multiple" 
-              rowHeight="{{authService.settings.rowHeight}}"
-              rowMultiSelectWithClick="{{authService.settings.rowMultiSelectWithClick}}"
+              [rowHeight]="authService.settings.rowHeight"
+              [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
               [rowData]="noMemberData"
               [columnDefs]="columnDefs"
               (gridReady)="onNoMemberReady($event)"
