--- a/src/app/shared/actions/group-members/group-members.page.html
+++ b/src/app/shared/actions/group-members/group-members.page.html
@@ -28,8 +28,8 @@
               class="{{authService.settings.agGridThema}}"
               [context]="context"
               rowSelection="multiple" 
-              rowHeight="{{authService.settings.rowHeight}}"
-              rowMultiSelectWithClick="{{authService.settings.rowMultiSelectWithClick}}"
+              [rowHeight]="authService.settings.rowHeight"
+              [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
               [rowData]="memberData"
               [columnDefs]="columnDefs"
               (selectionChanged)="onMemberSelectionChanged()"
@@ -49,8 +49,8 @@
               class="{{authService.settings.agGridThema}}"
               [context]="context"
               rowSelection="multiple" 
-              rowHeight="{{authService.settings.rowHeight}}"
-              rowMultiSelectWithClick="{{authService.settings.rowMultiSelectWithClick}}"
+              [rowHeight]="authService.settings.rowHeight"
+              [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
               [rowData]="noMemberData"
               [columnDefs]="columnDefs"
               (gridReady)="onNoMemberReady($event)"
