--- a/src/app/protected/cephalix/institutes/details/status/institute-status.component.html
+++ b/src/app/protected/cephalix/institutes/details/status/institute-status.component.html
@@ -9,8 +9,8 @@
     </ion-item>
   </ion-toolbar>
   <ag-grid-angular id="instituteStatusGrid" style="width: 100%; height: 100%;"
-    class="{{authService.settings.agGridThema}}" rowSelection="multiple" rowHeight="{{authService.settings.rowHeight}}"
-    [context]="context" [rowData]="rowData" [columnDefs]="columnDefs" [defaultColDef]="defaultColDef" headerHeight="150"
+    class="{{authService.settings.agGridThema}}" rowSelection="multiple" [rowHeight]="authService.settings.rowHeight"
+    [context]="context" [rowData]="rowData" [columnDefs]="columnDefs" [defaultColDef]="defaultColDef" [headerHeight]="150"
     [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick" (gridReady)="onGridReady($event)">
   </ag-grid-angular>
 </ion-content>
