--- a/src/app/protected/cephalix/institutes/lists/institutes-status.component.html
+++ b/src/app/protected/cephalix/institutes/lists/institutes-status.component.html
@@ -20,8 +20,8 @@
     </ion-buttons>
   </ion-toolbar>
   <ag-grid-angular id="agGridTable" style="width: 100%; height: 92%;" class="{{authService.settings.agGridThema}}"
-    rowSelection="multiple" rowHeight="{{authService.settings.rowHeight}}" [context]="context" [rowData]="rowData"
-    [columnDefs]="columnDefs" [defaultColDef]="defaultColDef" headerHeight="150"
+    rowSelection="multiple" [rowHeight]="authService.settings.rowHeight" [context]="context" [rowData]="rowData"
+    [columnDefs]="columnDefs" [defaultColDef]="defaultColDef" [headerHeight]="150"
     [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick" (firstDataRendered)="headerHeightSetter()"
     (columnResized)="headerHeightSetter()" (gridReady)="onGridReady($event)">
   </ag-grid-angular>
