--- a/src/app/protected/cephalix/institutes/lists/institutes.component.html
+++ b/src/app/protected/cephalix/institutes/lists/institutes.component.html
@@ -25,7 +25,7 @@
     </ion-buttons>
   </ion-toolbar>
   <ag-grid-angular id="agGridTable" style="width: 100%; height: 92%;" rowSelection="multiple"
-    class="{{authService.settings.agGridThema}}" rowHeight="{{authService.settings.rowHeight}}" [context]="context"
+    class="{{authService.settings.agGridThema}}" [rowHeight]="authService.settings.rowHeight" [context]="context"
     [rowData]="objectService.allObjects['institute']" [columnDefs]="columnDefs" [defaultColDef]="defaultColDef"
     [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick" (selectionChanged)="selectionChanged()"
     (gridReady)="onGridReady($event)">
