--- a/src/app/protected/cephalix/tickets/tickets.page.html
+++ b/src/app/protected/cephalix/tickets/tickets.page.html
@@ -29,7 +29,7 @@
 </ion-toolbar>
 <ion-content *ngIf="!authService.isMD() && objectService.allObjects['ticket']" id="carded">
   <ag-grid-angular style="width: 100%; height: 100%;" rowSelection="multiple"
-    class="{{authService.settings.agGridThema}}" rowHeight="{{authService.settings.rowHeight}}" [context]="context"
+    class="{{authService.settings.agGridThema}}" [rowHeight]="authService.settings.rowHeight" [context]="context"
     [rowData]="objectService.allObjects['ticket']" [columnDefs]="columnDefs" [defaultColDef]="defaultColDef"
     [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick" (gridReady)="onGridReady($event)"
     id="ticketsPageTable">
