--- a/src/app/protected/cranix/devices/lists/printers.component.html
+++ b/src/app/protected/cranix/devices/lists/printers.component.html
@@ -29,7 +29,7 @@
 </ion-toolbar>
 <ion-content *ngIf="!authService.isMD()" id="carded">
   <ag-grid-angular style="width: 100%; height:  100%;" class="{{authService.settings.agGridThema}}"
-    rowSelection="multiple" rowHeight="{{authService.settings.rowHeight}}" [context]="context"
+    rowSelection="multiple" [rowHeight]="authService.settings.rowHeight" [context]="context"
     [rowData]="objectService.allObjects['printer']" [columnDefs]="columnDefs"
     [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick" (selectionChanged)="selectionChanged()"
     (gridReady)="onGridReady($event)" id="agGridTable">
