--- a/src/app/protected/cranix/groups/groups.page.html
+++ b/src/app/protected/cranix/groups/groups.page.html
@@ -25,8 +25,8 @@
 </ion-toolbar>
 <ion-content *ngIf="!authService.isMD()" id="carded">
   <ag-grid-angular style="width: 100%; height: 100%;" rowSelection="multiple"
-    class="{{authService.settings.agGridThema}}" rowHeight="{{authService.settings.rowHeight}}"
-    rowMultiSelectWithClick="{{authService.settings.rowMultiSelectWithClick}}" [context]="context"
+    class="{{authService.settings.agGridThema}}" [rowHeight]="authService.settings.rowHeight"
+    [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick" [context]="context"
     [rowData]="objectService.allObjects['group']" [columnDefs]="columnDefs" (gridReady)="onGridReady($event)"
     (selectionChanged)="selectionChanged()" id="groupsPageTable">
   </ag-grid-angular>
