--- a/src/app/protected/cranix/hwconfs/hwconfs.page.html
+++ b/src/app/protected/cranix/hwconfs/hwconfs.page.html
@@ -27,7 +27,7 @@
   <ag-grid-angular id="agGridTable" style="width: 100%; height: 100%;"
     rowSelection="multiple" class="{{authService.settings.agGridThema}}"
     [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
-    rowHeight="{{authService.settings.rowHeight}}" [rowData]="objectService.allObjects['hwconf']"
+    [rowHeight]="authService.settings.rowHeight" [rowData]="objectService.allObjects['hwconf']"
     [columnDefs]="columnDefs" [defaultColDef]="defaultColDef" [context]="context" (gridReady)="onGridReady($event)"
     (selectionChanged)="selectionChanged()">
   </ag-grid-angular>
