--- a/src/app/protected/cranix/mygroups/mygroups.page.html
+++ b/src/app/protected/cranix/mygroups/mygroups.page.html
@@ -39,8 +39,8 @@
 </ion-item>
 <ion-content *ngIf="!authService.isMD()" id="carded">
   <ag-grid-angular id="myGroupsTable" style="width: 100%; height: 100%;" rowSelection="multiple"
-    class="{{authService.settings.agGridThema}}" rowHeight="{{authService.settings.rowHeight}}"
-    rowMultiSelectWithClick="{{authService.settings.rowMultiSelectWithClick}}" animateRows="true" [modules]="modules"
+    class="{{authService.settings.agGridThema}}" [rowHeight]="authService.settings.rowHeight"
+    [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick" [animateRows]="true" [modules]="modules"
     [context]="context" [rowData]="rowData" [columnDefs]="columnDefs" [defaultColDef]="defaultColDef"
     (selectionChanged)="selectionChanged()" (gridReady)="onGridReady($event)">
   </ag-grid-angular>
