--- a/src/app/protected/cranix/rooms/lists/adhoc.component.html
+++ b/src/app/protected/cranix/rooms/lists/adhoc.component.html
@@ -20,7 +20,7 @@
 </ion-toolbar>
 <ion-content *ngIf="!authService.isMD()" id="carded">
   <ag-grid-angular id="adhocComponentTable" style="width: 100%; height: 100%;" rowSelection="multiple"
-    class="{{authService.settings.agGridThema}}" rowHeight="{{authService.settings.rowHeight}}"
+    class="{{authService.settings.agGridThema}}" [rowHeight]="authService.settings.rowHeight"
     [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick" [context]="context"
     [rowData]="objectService.allObjects['adhocroom']" [columnDefs]="columnDefs" [defaultColDef]="defaultColDef"
     (selectionChanged)="selectionChanged()" (gridReady)="onGridReady($event)">
