--- a/src/app/protected/cranix/rooms/lists/rooms.component.html
+++ b/src/app/protected/cranix/rooms/lists/rooms.component.html
@@ -24,7 +24,7 @@
 </ion-toolbar>
 <ion-content *ngIf="!authService.isMD()" id="carded">
   <ag-grid-angular id="roomsComponentTable" style="width: 100%; height: 100%;"
-    class="{{authService.settings.agGridThema}}" rowHeight="{{authService.settings.rowHeight}}" [context]="context"
+    class="{{authService.settings.agGridThema}}" [rowHeight]="authService.settings.rowHeight" [context]="context"
     [rowData]="objectService.allObjects['room']" [columnDefs]="columnDefs" [defaultColDef]="defaultColDef"
     rowSelection="multiple" [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
     (selectionChanged)="selectionChanged()" (gridReady)="onGridReady($event)">
