--- a/src/app/protected/cranix/security/access-log/access-log.component.html
+++ b/src/app/protected/cranix/security/access-log/access-log.component.html
@@ -10,8 +10,8 @@
   <ag-grid-angular 
     *ngIf="rowData.length > 1"
     style="width: 100%; height: 100%;" rowSelection="multiple"
-    class="{{authService.settings.agGridThema}}" rowHeight="{{authService.settings.rowHeight}}"
-    rowMultiSelectWithClick="{{authService.settings.rowMultiSelectWithClick}}" [rowData]="rowData"
+    class="{{authService.settings.agGridThema}}" [rowHeight]="authService.settings.rowHeight"
+    [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick" [rowData]="rowData"
     [columnDefs]="columnDefs" [defaultColDef]="defaultColDef" (gridReady)="onGridReady($event)" id="logsTable">
   </ag-grid-angular>
 </ion-content>
