--- a/src/app/protected/cranix/softwares/edit-set/edit-installation-set.component.html
+++ b/src/app/protected/cranix/softwares/edit-set/edit-installation-set.component.html
@@ -90,7 +90,7 @@
           </ion-item>
           <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.settings.agGridThema}}"
             id="availableSoftwaresTable" [rowData]="softwareService.availableSoftwares"
-            [columnDefs]="softwareColumnDefs" rowSelection="multiple" rowMultiSelectWithClick="true" [context]="context"
+            [columnDefs]="softwareColumnDefs" rowSelection="multiple" [rowMultiSelectWithClick]="true" [context]="context"
             (gridReady)="availableSoftwaresReady($event)" (selectionChanged)="availableSoftwaresChanged()">
           </ag-grid-angular>
         </ion-col>
@@ -101,7 +101,7 @@
           </ion-item>
           <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.settings.agGridThema}}"
             id="availableHwconfsTable" [rowData]="availableHwconfs" [columnDefs]="hwconfColumnDefs"
-            rowSelection="multiple" rowMultiSelectWithClick="true" [context]="context"
+            rowSelection="multiple" [rowMultiSelectWithClick]="true" [context]="context"
             (gridReady)="availableHwconfsReady($event)" (selectionChanged)="availableHwconfsChanged()">
           </ag-grid-angular>
         </ion-col>
@@ -112,7 +112,7 @@
           </ion-item>
           <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.settings.agGridThema}}"
             id="availableRoomsTable" [rowData]="availableRooms" [columnDefs]="roomColumnDefs" rowSelection="multiple"
-            rowMultiSelectWithClick="true" [context]="context" (gridReady)="availableRoomsReady($event)"
+            [rowMultiSelectWithClick]="true" [context]="context" (gridReady)="availableRoomsReady($event)"
             (selectionChanged)="availableRoomsChanged()">
           </ag-grid-angular>
         </ion-col>
@@ -123,7 +123,7 @@
           </ion-item>
           <ag-grid-angular style="width: 100%; height: 200px;" class="{{authService.settings.agGridThema}}"
             id="availableDevicesTable" [rowData]="availableDevices" [columnDefs]="deviceColumnDefs"
-            rowSelection="multiple" rowMultiSelectWithClick="true" [context]="context"
+            rowSelection="multiple" [rowMultiSelectWithClick]="true" [context]="context"
             (gridReady)="availableDevicesReady($event)" (selectionChanged)="availableDevicesChanged()">
           </ag-grid-angular>
         </ion-col>
