--- a/src/app/protected/cranix/softwares/status/software-status.component.html
+++ b/src/app/protected/cranix/softwares/status/software-status.component.html
@@ -46,8 +46,8 @@
     </ion-col>
   </ion-row>
   <ag-grid-angular #agGrid id="softwareStatusTable" style="width: 100%; height: 600px;"
-    class="{{authService.settings.agGridThema}}" rowHeight="{{authService.settings.rowHeight}}" rowSelection="multiple"
-    animateRows="true" [context]="context" [rowData]="softwareData" [columnDefs]="columnDefs"
+    class="{{authService.settings.agGridThema}}" [rowHeight]="authService.settings.rowHeight" rowSelection="multiple"
+    [animateRows]="true" [context]="context" [rowData]="softwareData" [columnDefs]="columnDefs"
     [defaultColDef]="defaultColDef" [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
     (gridReady)="softwareDataReady($event)">
   </ag-grid-angular>
