--- a/src/app/protected/cranix/system/acls/system-acls.component.html
+++ b/src/app/protected/cranix/system/acls/system-acls.component.html
@@ -18,7 +18,7 @@
                 id="groupFilter"></ion-input>
             </ion-item>
             <ag-grid-angular [context]="context" style="width: 100%; height: 100%;"
-              class="{{authService.settings.agGridThema}}" rowHeight="{{authService.settings.rowHeight}}"
+              class="{{authService.settings.agGridThema}}" [rowHeight]="authService.settings.rowHeight"
               [rowData]="groupsData" [columnDefs]="groupColumnDefs" [defaultColDef]="defaultColDef"
               (gridReady)="groupsReady($event)" id="groupsTable">
             </ag-grid-angular>
@@ -32,7 +32,7 @@
               </ion-input>
             </ion-item>
             <ag-grid-angular [context]="context" style="width: 100%; height: 100%;"
-              class="{{authService.settings.agGridThema}}" rowHeight="{{authService.settings.rowHeight}}"
+              class="{{authService.settings.agGridThema}}" [rowHeight]="authService.settings.rowHeight"
               [rowData]="usersData" [columnDefs]="userColumnDefs" [defaultColDef]="defaultColDef"
               (gridReady)="usersReady($event)" id="usersTable">
             </ag-grid-angular>
