--- a/src/app/protected/edu/lessons/tabs/mypositive/mypositive.component.html
+++ b/src/app/protected/edu/lessons/tabs/mypositive/mypositive.component.html
@@ -47,7 +47,7 @@
         style="width: 100%; height:  100%;"
         class="{{authService.settings.agGridThema}}"
         rowSelection="multiple"
-        rowHeight="{{authService.settings.rowHeight}}"
+        [rowHeight]="authService.settings.rowHeight"
         [context]="context"
         [rowData]="rowData"
         [columnDefs]="columnDefs"
