--- a/src/app/protected/cranix/mygroups/mygroups.page.html
+++ b/src/app/protected/cranix/mygroups/mygroups.page.html
@@ -1,25 +1,25 @@
 <cranix-toolbar title="{{ 'My ' + segment +'s' | translate }}"></cranix-toolbar>
 <ion-toolbar class="page-toolbar">
-  <ion-segment (ionChange)="segmentChanged($event)" color="secondary" value="group">
-    <ion-segment-button value="group" layout="icon-start">
+  <ion-segment (ionChange)="segmentChanged($event)" color="secondary" value="education/group">
+    <ion-segment-button value="education/group" layout="icon-start">
       <ion-label class="hidden-xs hidden-sm">{{'Groups' | translate}}</ion-label>
       <ion-icon name="people-circle"></ion-icon>
     </ion-segment-button>
-    <ion-segment-button value="student" layout="icon-start">
+    <ion-segment-button value="education/user" layout="icon-start">
       <ion-label class="hidden-xs hidden-sm">{{'Students' | translate}}</ion-label>
       <ion-icon name="people"></ion-icon>
     </ion-segment-button>
-    <ion-segment-button value="guest" layout="icon-start">
+    <ion-segment-button value="education/guestUser" layout="icon-start">
       <ion-label class="hidden-xs hidden-sm">{{'Guest Users' | translate}}</ion-label>
       <ion-icon name="walk"></ion-icon>
     </ion-segment-button>
   </ion-segment>
   <ion-buttons *ngIf="!authService.isMD()" slot="end">
-    <ion-button *ngIf="segment == 'group' || (segment == 'student' && authService.isAllowed('user.add.students'))"
+    <ion-button *ngIf="segment == 'education/group' || (segment == 'education/user' && authService.isAllowed('user.add.students'))"
       size="small" fill="solid" (click)="redirectToEdit(null)" matTooltip="{{'Create a new ' + segment | translate }}">
       <ion-icon slot="icon-only" name="add-circle"></ion-icon>
     </ion-button>
-    <ion-button *ngIf="segment == 'guest'" size="small" fill="solid" (click)="addEditGuest(null)"
+    <ion-button *ngIf="segment == 'education/guestUser'" size="small" fill="solid" (click)="addEditGuest(null)"
       matTooltip="{{'Create new guest accounts' | translate }}">
       <ion-icon slot="icon-only" name="add-circle"></ion-icon>
     </ion-button>
@@ -41,17 +41,17 @@
   <ag-grid-angular id="myGroupsTable" style="width: 100%; height: 100%;" rowSelection="multiple"
     class="{{authService.settings.agGridThema}}" [rowHeight]="authService.settings.rowHeight"
     [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick" [animateRows]="true" [modules]="modules"
-    [context]="context" [rowData]="rowData" [columnDefs]="columnDefs" [defaultColDef]="defaultColDef"
+    [context]="context" [rowData]="objectService.allObjects[segment]" [columnDefs]="columnDefs" [defaultColDef]="defaultColDef"
     (selectionChanged)="selectionChanged()" (gridReady)="onGridReady($event)">
   </ag-grid-angular>
 </ion-content>
-<ion-content *ngIf="authService.isMD() && segment == 'student'">
+<ion-content *ngIf="authService.isMD() && segment == 'education/user'">
   <cranix-md-list objectType="education/user" [context]="context"></cranix-md-list>
 </ion-content>
-<ion-content *ngIf="authService.isMD() && segment == 'group'">
+<ion-content *ngIf="authService.isMD() && segment == 'education/group'">
   <cranix-md-list objectType="education/group" [context]="context"></cranix-md-list>
 </ion-content>
-<ion-content *ngIf="authService.isMD() && segment == 'guest'">
+<ion-content *ngIf="authService.isMD() && segment == 'education/guestUser'">
   <ion-fab vertical="top" horizontal="end" slot="fixed">
     <ion-fab-button size="small">
       <ion-icon name="arrow-forward-circle"></ion-icon>
@@ -60,7 +60,7 @@
       <ion-fab-button (click)="openActions($event,null)">
         <ion-icon name="ellipsis-vertical-sharp"></ion-icon>
       </ion-fab-button>
-      <ion-fab-button *ngIf="segment == 'guest'" (click)="addEditGuest(null)">
+      <ion-fab-button *ngIf="segment == 'education/guestUser'" (click)="addEditGuest(null)">
         <ion-icon name="add-circle"></ion-icon>
       </ion-fab-button>
     </ion-fab-list>
