--- a/src/app/protected/cranix/mygroups/mygroups.page.html
+++ b/src/app/protected/cranix/mygroups/mygroups.page.html
@@ -40,7 +40,7 @@
 <ion-content *ngIf="!authService.isMD()" id="carded">
   <ag-grid-angular id="myGroupsTable" style="width: 100%; height: 100%;" rowSelection="multiple"
     class="{{authService.settings.agGridThema}}" [rowHeight]="authService.settings.rowHeight"
-    [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick" [animateRows]="true" [modules]="modules"
+    [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick" [animateRows]="true"
     [context]="context" [rowData]="objectService.allObjects[segment]" [columnDefs]="columnDefs" [defaultColDef]="defaultColDef"
     (selectionChanged)="selectionChanged()" (gridReady)="onGridReady($event)">
   </ag-grid-angular>
