--- a/src/app/protected/cranix/informations/informations.component.html
+++ b/src/app/protected/cranix/informations/informations.component.html
@@ -61,18 +61,23 @@
       <ion-card-content style="height: 100%" [id]="'category' + categorId">
         <ion-grid>
           <ion-row>
-            <ion-col sizeXl="3" size-lg="4" sizeMd="6" sizeSm="12" sizeXs="12" *ngFor="let info of infos[categorId]"
+            <ion-col sizeXl="3" size-lg="3" sizeMd="4" sizeSm="6" sizeXs="12" *ngFor="let info of infos[categorId]"
               style="background-color: #f7f7f7; border: solid 1px #ddd; border-radius: 20px 5px;">
               <ion-toolbar>
-                <div *ngIf="segment == 'contact'">
-                  <h2>{{info.title}} {{info.issue}}</h2>
-                  <h3>{{info.name}} Tel.:{{info.phone}}</h3>
-                  <a href="mailto:{{info.email}}">{{info.email}}</a>
-                </div>
-                <div *ngIf="segment != 'contact'">
-                  <h2>{{info.title}}</h2>
-                  <h3 *ngIf='info.validUntil'>{{ info.validUntil | date:'yyyy-MM-dd HH:mm' }} </h3>
-                </div>
+                <ion-item *ngIf="segment == 'contact'" button lines="none" (click)="addEditInfo(info.id)">
+                  <ion-label>
+                    <h2>{{info.title}} {{info.issue}}</h2>
+                    <h3>{{info.name}}</h3>
+                    <h3>Tel.:{{info.phone}}</h3>
+                    <a href="mailto:{{info.email}}">{{info.email}}</a>
+                  </ion-label>
+                </ion-item>
+                <ion-item *ngIf="segment != 'contact'" button lines="none" (click)="addEditInfo(info.id)">
+                  <ion-label>
+                    <h2>{{info.title}}</h2>
+                    <h3 *ngIf='info.validUntil'>{{ info.validUntil | date:'yyyy-MM-dd HH:mm' }} </h3>
+                  </ion-label>
+                </ion-item>
                 <ion-buttons slot="end">
                   <ion-button *ngIf="segment == 'task' && owned" (click)="openResponses(info)" size="small">
                     <ion-icon slot="icon-only" name="albums"></ion-icon>
@@ -81,14 +86,14 @@
                     size="small">
                     <ion-icon slot="icon-only" color="success" name="build"></ion-icon>
                   </ion-button>
-                  <ion-button *ngIf="!taskResponses[info.id]" size="small" (click)="addEditInfo(info.id)">
+                  <!-- ion-button *ngIf="!taskResponses[info.id]" size="small" (click)="addEditInfo(info.id)">
                     <ion-icon *ngIf="!owned && segment == 'announcement' && info.seenByMe; else elseBlock" name="book"
                       color="success"></ion-icon>
                     <ng-template #elseBlock>
                       <ion-icon *ngIf="!owned" slot="icon-only" name="book"></ion-icon>
                       <ion-icon *ngIf="owned" slot="icon-only" name="build"></ion-icon>
                     </ng-template>
-                  </ion-button>
+                  </ion-button -->
                   <ion-button *ngIf="owned" (click)="deleteInfo(info)" size="small">
                     <ion-icon slot="icon-only" name="trash" color="danger"></ion-icon>
                   </ion-button>
