--- a/src/app/protected/cephalix/tickets/tickets.page.html
+++ b/src/app/protected/cephalix/tickets/tickets.page.html
@@ -31,7 +31,7 @@
   <ag-grid-angular style="width: 100%; height: 100%;" rowSelection="multiple"
     class="{{authService.settings.agGridThema}}" [rowHeight]="authService.settings.rowHeight" [context]="context"
     [rowData]="objectService.allObjects['ticket']" [columnDefs]="columnDefs" [defaultColDef]="defaultColDef"
-    [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick" (gridReady)="onGridReady($event)"
+    (gridReady)="onGridReady($event)" (cellClicked)="ticketClickHandle($event)"
     id="ticketsPageTable">
   </ag-grid-angular>
 </ion-content>
